2.x/building-your-app.md
# Создание Вашего приложения

[[toc]]

## Введение

После установки Jetstream Вы можете задаться вопросом, как на самом деле начать сборку Вашего приложения. К счастью, поскольку Jetstream обрабатывает конфигурацию всей начальной аутентификации и построения приложений, Вы можете сразу приступить к работе!

После установки Jetstream код Ваш. Шаблоны принадлежат Вашему приложению и могут быть изменены по Вашему усмотрению. Jetstream - это только отправная точка. Вам не нужно беспокоиться о том, чтобы Ваш пользовательский интерфейс был «совместим» с будущими выпусками Jetstream, потому что каждый выпуск Jetstream - это просто совершенно новая итерация стартового набора. Другими словами, Jetstream - это не панель инструментов или административная панель, которую Вы будете «обновлять» в будущем. Это стартовый набор для Laravel, и после его установки шаблоны полностью принадлежат Вам.

:::tip Livewire и Inertia

Прежде чем погрузиться в Jetstream, Вы должны знать, как использовать [Laravel Livewire](https://laravel-livewire.com) или [Inertia](https://inertiajs.ru). Jetstream в значительной степени полагается на эти технологии, чтобы обеспечить первоклассный опыт для пользователей и разработчиков.

:::

## Панель приложения

После аутентификации в Вашем приложении Вы будете перенаправлены на маршрут `/dashboard`. Этот маршрут является домашним экраном/экраном панели управления Вашего приложения. Когда Вы используете стек Livewire, эта страница отображается с помощью шаблона Blade `resources/views/dashboard.blade.php`. При использовании стека Inertia экран отображается с помощью компонента `resources/js/Pages/Dashboard.vue`.

Если Вы откроете шаблон/компонент панели управления для своего приложения, Вы увидите, что он расширяет основной компонент «макета» приложения. Этот макет определяет общий вид интерьера Вашего приложения. При использовании Livewire этот макет определяется шаблоном `resources/views/layouts/app.blade.php` и отображается через класс компонентов `App\View\Components\AppLayout`. При использовании Inertia макет вашего приложения определяется компонентом `resources/js/Layouts/AppLayout.vue`.

После того, как Вы ознакомитесь с шаблонами панели инструментов и макета приложения, не стесняйтесь приступать к их редактированию. Например, Вы, вероятно, захотите удалить компонент «приветствия», который отображается на панели инструментов Вашего приложения. Для этого Вы можете удалить его из шаблона панели инструментов. Затем Вы можете написать HTML-код, необходимый для создания Вашего приложения. Помните, что Jetstream использует мощный фреймворк Tailwind CSS, поэтому обязательно узнайте больше о Tailwind, обратившись к [документации Tailwind](https://tailwindcss.su/docs).

### Добавление дополнительных страниц

По умолчанию в верхнем меню навигации Jetstream есть ссылка на панель управления приложения. Конечно, Вы можете редактировать это меню навигации, добавляя ссылки на другие страницы, которые будут доступны в Вашем приложении. При использовании Livewire меню навигации определяется шаблоном Blade `resources/views/navigation-menu.blade.php`. При использовании Inertia меню навигации определяется в компоненте `resources/js/Layouts/AppLayout.vue`.

## Профиль пользователя

При создании приложения Jetstream Вам, вероятно, потребуется добавить свои собственные формы и панели на экран управления профилем пользователя. По умолчанию экран профиля пользователя содержит панели для обновления контактной информации пользователя, пароля, управления его настройками двухфакторной аутентификации и т. д. Однако Вы можете добавлять свои собственные дополнительные панели на эту страницу. Для этого Вы можете просто отредактировать шаблоны, определяющие страницу.

При использовании Livewire экран управления профилем пользователя определяется шаблоном Blade `resources/views/profile/show.blade.php`. При использовании Inertia этот экран отображается с помощью компонента `resources/js/Pages/Profile/Show.vue`. Чтобы добавить дополнительные панели или формы в профиль пользователя, Вы можете просто отредактировать эти шаблоны по мере необходимости для Вашего приложения.

## Управление командой

Вам также может потребоваться добавить дополнительные формы и панели на экраны управления командой, отображаемые Jetstream. К ним относятся экран «Параметры команды» для управления существующими командами, а также экран «Создать команду», который отображается, когда пользователь создает новую команду.

### Экран создания команды

Когда групповая поддержка включена, Jetstream включает экран, который позволяет пользователям создавать новые команды. Вы можете добавлять дополнительные поля формы в форму, содержащуюся на этом экране. Любые дополнительные поля формы, которые Вы добавляете, будут переданы в действие Jetstream `App\Actions\Jetstream\CreateTeam` через аргумент `$input`.

При использовании Livewire экран создания команды определяется шаблоном Blade `resources/views/teams/create.blade.php`. При использовании Inertia этот экран отображается с помощью компонента `resources/js/Pages/Teams/Create.vue`.

### Экран настроек команды

Когда групповая поддержка включена, Jetstream включает экран, который позволяет пользователям управлять настройками для своих существующих команд, такими как изменение названия группы или приглашение дополнительных членов команды. Вы можете добавлять свои собственные дополнительные панели на эти страницы. Для этого Вы можете просто отредактировать шаблоны, определяющие страницу.

При использовании Livewire экран настроек команды определяется шаблоном Blade `resources/views/teams/show.blade.php`. При использовании Inertia этот экран отображается с помощью компонента `resources/js/Pages/Teams/Show.vue`.

### Баннер уведомлений

Jetstream включает баннер с уведомлением, который может отображаться в верхней части пользовательского интерфейса Вашего приложения. Если Вы используете стек Livewire, Вы должны убедиться, что этот баннер с уведомлением был опубликован с помощью команды `vendor:publish`:

```bash
php artisan vendor:publish --tag=jetstream-views
```

После публикации компонентов Jetstream Ваше приложение будет содержать компонент баннера в каталоге `vendor/components/banner.blade.php`. Если Вы используете стек Inertia, Ваш баннерный компонент будет содержаться в компоненте Vue `Banner.vue`.

Чтобы указать Jetstream отображать баннер, Вы должны передать в сеанс сообщение `flash.banner`. В дополнение к сообщению баннера Вы также можете указать Jetstream отображать баннер в стиле `success` или `danger`:

```php
$request->session()->flash('flash.banner', 'Yay it works!');
$request->session()->flash('flash.bannerStyle', 'success');

return $this->redirect('/');
```
